# AgenticAI-PydanticAI

./: .gitignore  LICENSE  README.md  pyproject.toml  verify_setup.py
common/: database.py  pydantic_ai_client.py  settings.py
examples/interview_practice/: agent.py
examples/thinking-traces/: server.py  stream_output_type_example.py
lessons/lesson-01-introduction/: README.md
lessons/lesson-02-first-agent/: README.md
lessons/lesson-03-system-prompts/: README.md
lessons/lesson-04-dependencies/: README.md
lessons/lesson-05-tools/: README.md
lessons/lesson-06-result-validation/: README.md
lessons/lesson-07-streaming/: README.md
pydantic-ai-documentation/: download_md.py  file.md  index.md
pydanticai-masterclass/: .env.example  README.md  pyproject.toml  verify_setup.py
pydanticai-masterclass/common/: __init__.py  database.py  logging.py  settings.py
pydanticai-masterclass/lessons/01_foundations/00_basics/: 01_simple_agent.py  02_streaming.py  03_with_logfire.py
pydanticai-masterclass/lessons/01_foundations/01_dependency_injection/: 01_basic_deps.py  02_database_deps.py  03_complex_deps.py  04_dynamic_prompts.py  05_testing_mocks.py  06_output_validators.py  07_sync_vs_async_deps.py  08_overriding_deps.py  README.md
pydanticai-masterclass/lessons/01_foundations/02_dynamic_tools/: 01_deferred_basics.py  01_function_tools.py  02_advanced_tool_features.py  03_toolsets.py  04_deferred_tools.py  05_built_in_tools.py  06_common_tools.py  07_third_party_tools.py  README.md
thinking-traces/: server.py  test.py
thinking-traces/static/: app.js  style.css  (+1 more)
(+145 files in other folders)
