[project]
name = "pydanticai-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "fuzzywuzzy>=0.18.0",
    "langchain>=1.2.10",
    "logfire>=4.24.0",
    "pydantic-ai>=1.59.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "structlog>=25.5.0",
]
