[project]
name = "pydanticai-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logfire>=4.21.0",
    "pydantic-ai[logfire]>=1.51.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
]
